# electricity-demand-forecasting

./: .gitignore  README.md  pyproject.toml
data/interim/: daily_weather_and_holidays.csv
data/processed/: weekly_german_electricity_demand.csv
outputs/forecasts/: benchmark_forecasts.csv  feature_model_forecast.csv  lstm_forecast.csv  sarima_forecast.csv  sarima_training_residuals.csv  sarimax_forecast.csv
outputs/metrics/: benchmark_metrics.csv  feature_importance.csv  feature_model_metrics.csv  lstm_metrics.csv  model_comparison.csv  processed_data_summary.csv  sarima_ljung_box.csv  sarima_metrics.csv  sarima_order_search.csv  sarima_rejected_candidates.csv  sarimax_candidate_comparison.csv  sarimax_ljung_box.csv  sarimax_metrics.csv  stationarity_tests.csv
scripts/: download_data.py  evaluate_models.py  make_features.py  run_feature_model.py  run_neural.py  run_pipeline.py  run_sarima.py  run_sarimax.py
src/electricity_demand/: config.py  data.py  evaluation.py  features.py  pipeline.py  plotting.py
src/electricity_demand/models/: benchmarks.py  feature_models.py  neural.py  sarimax.py
tests/: test_benchmarks.py  test_evaluation.py  test_features.py  test_neural.py  test_pipeline.py
